Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.


pkgcore 0.2.12:

* Ensure PackageRestriction._handle_exceptions filters the check down to
  just strings; if running pure python, this could trigger a traceback
  via the python native native_CPV.__cmp__.

* Tweak python native native_CPV.__cmp__ to not explode if given an instance
  that's not a CPV derivative.

* Reorder ||() to use anything matched via the current state graph, aside
  from normal reordering to prefer vdb.

* default mode for ensure_dirs is now 0755.

* Work around broken java-utils-2.eclass state handling in 
  java-pkg_init_paths_; tries to access DESTTREE in setup phase, which
  shouldn't be allowed- fix is temporarily shifting the DESTTREE definition
  to pre-ebuild sourcing so that it behaves.

  Will be removed as soon as the eclass behaves is fixed.


pkgcore 0.2.11:

* COLON_SEPARATED, not COLON_SEPERATED for env.d parsing.

* fix ticket #74; "x=y@a" should parse out as 'y@a', was terminating
  early.


pkgcore 0.2.10:

* FEATURES=ccache now corrects perms as needed for when userpriv toggles.

* shift PORTAGE_ACTUAL_DISTDIR and DISTDIR definition into the initial env,
  so that evil git/subversion/cvs class can get at it globally.

* pquery --attr repo now returns the repo_id if it can get it, instead of
  the str of the repo object.

* OR grouppings in PROVIDES was explicitly disabled; no ebuild uses it, nor 
  should any.


pkgcore 0.2.9:

* convert use.mask/package.use.mask, use.force/package.use.force stacking
  to match portage behaviour- basically stack use.* and package.* per profile
  node rather then going incremental for use.*, then package.* .  If you were
  having issues with default-linux/amd64/2006.1 profile and sse/sse2 flags for
  mplayer, this ought to correct it.

* add USE conditional support to RESTRICT.

* fix noisy regression from 0.2.8 for temp declare overriding; if you saw lots